--- a/index.html
+++ b/index.html
@@ -18,12 +18,12 @@
         <header class="main-header-section">
             <div class="container">
                 <div class="row no-gutters top-bar">
-                    <span class="mr-auto">ARTIST SUBMISSION</span>
+                    <span class="mr-auto d-sm-none d-md-block">ARTIST SUBMISSION</span>
                     <div class="top-right-link-wrap ml-auto">
                         <a href="#" class="top-right-link">SIGN UP</a>
                         <a href="#" class="top-right-link">SIGN IN</a>
                         <a href="#" class="top-right-link">CART (0)</a>
-                        <form class="search-form my-0 d-inline-block">
+                        <form class="search-form mb-0 d-inline-block">
                           <input class="form-control mr-sm-2 d-none" type="search" placeholder="Search" aria-label="Search">
                           <button class="m-0 p-0 header-search-triger" type="submit">SEARCH</button>
                         </form>
@@ -45,7 +45,7 @@
                       </ul>
                     </div>
 
-                    <a class="navbar-brand mx-auto" href="index.html"><img src="svg/main-logo.svg" alt=""></a>
+                    <a class="navbar-brand mx-auto ml-sm-auto mr-sm-0" href="index.html"><img src="svg/main-logo.svg" alt=""></a>
 
                     <div class="collapse navbar-collapse">
                       <ul class="nav navbar-nav ml-auto">
@@ -84,7 +84,7 @@
         <div class="main-content">
             <!-- Beginning hero section -->
             <section class="hero-section position-relative" id="hero-section">
-                <div class="hero-slider-cotroller position-absolute">
+                <div class="hero-slider-cotroller d-sm-none d-md-block position-absolute">
                     <div class="container position-relative">
                         <button class="prev slick-arrow" type="button"><img src="svg/arrow-left.svg" alt=""></button>
                         <button class="next slick-arrow" type="button"><img src="svg/arrow-right.svg" alt=""></button>
@@ -95,7 +95,7 @@
                         <div class="container position-relative">
                             <div class="slider-caption-wrap position-absolute">
                                 <div class="slider-caption-inner">
-                                    <div class="slider-caption d-flex align-items-center">
+                                    <div class="slider-caption d-md-flex d-sm-block align-items-center">
                                         <a href="#" class="play-video"><img src="svg/play-icon.svg" alt=""></a>
                                         <div class="caption-content text-center">
                                             <h5>HOW TO START YOUR</h5>
@@ -110,7 +110,7 @@
                         <div class="container position-relative">
                             <div class="slider-caption-wrap position-absolute">
                                 <div class="slider-caption-inner">
-                                    <div class="slider-caption d-flex align-items-center">
+                                    <div class="slider-caption d-md-flex d-sm-block align-items-center">
                                         <a href="#" class="play-video"><img src="svg/play-icon.svg" alt=""></a>
                                         <div class="caption-content text-center">
                                             <h5>HOW TO START YOUR</h5>
@@ -135,16 +135,16 @@
                             <a href="shop-by-artist.html" class="body-link">View more at About us></a>
                             <h6>AS SEEN IN</h6>
                             <div class="logo-wrap row no-gutters d-flex justify-content-around">
-                                <div class="col-md-3 col-12 logo">
+                                <div class="col-md-3 my-sm-3 col-12 logo">
                                     <img src="img/image-3.png" alt="">
                                 </div>
-                                <div class="col-md-3 col-12 logo">
+                                <div class="col-md-3 my-sm-3 col-12 logo">
                                     <img src="img/image-2.png" alt="">
                                 </div>
-                                <div class="col-md-3 col-12 logo">
+                                <div class="col-md-3 my-sm-3 col-12 logo">
                                     <img src="img/image-1.png" alt="">
                                 </div>
-                                <div class="col-md-3 col-12 logo">
+                                <div class="col-md-3 my-sm-3 col-12 logo">
                                     <img src="img/visi-masthead.png" alt="">
                                 </div>
                             </div>
@@ -156,7 +156,7 @@
             
             <!-- Beginning Why buy from Section -->
             <section class="why-buy-from-us bg-light-gray">
-                <h2>Why buy from us?</h2>
+                <h3>Why buy from us?</h3>
                 <div class="container">
                     <div class="row no-gutters">
                         <div class="col-md-4 col-12 feature-item">
@@ -239,7 +239,7 @@
                         <div class="col-12 lead-text-wrap">
                             <h6>MEET ARTFULL’S</h6>
                             <h3>KHOLISA THOMAS</h3>
-                            <p>Passionate about bridging the gap between the art world and art lovers, Kholisa founded artfull, to provide a platform for emerging artists to show and sell their work and for would-be collectors to engage with them in a meaningful and uplifting way. </p>
+                            <div class="lead-text">Passionate about bridging the gap between the art world and art lovers, Kholisa founded artfull, to provide a platform for emerging artists to show and sell their work and for would-be collectors to engage with them in a meaningful and uplifting way. </div>
                             <a href="#" class="body-link"> View more at KHOLISA> </a>
                         </div>
                     </div>
@@ -297,7 +297,7 @@
         <footer class="main-footer-section">
             <div class="container">
                 <div class="row">
-                    <div class="col-lg-2 col-md-4 col-12 footer-widget">
+                    <div class="col-xl-2 col-lg-3 col-md-4 col-12 footer-widget">
                         <h6>ABOUT</h6>
                         <ul>
                             <li><a href="#">artfull</a></li>
@@ -306,7 +306,7 @@
                             <li><a href="#">Artists</a></li>
                         </ul>
                     </div>
-                    <div class="col-lg-2 col-md-4 col-12 footer-widget">
+                    <div class="col-xl-2 col-lg-3 col-md-4 col-12 footer-widget">
                         <h6>COLLECTORS</h6>
                         <ul>
                             <li><a href="#">Shipping</a></li>
@@ -315,19 +315,19 @@
                             <li><a href="#">FAQ’s</a></li>
                         </ul>
                     </div>
-                    <div class="col-lg-2 col-md-4 col-12 footer-widget">
+                    <div class="col-xl-2 col-lg-3 col-md-4 col-12 footer-widget">
                         <h6>ARTISTS</h6>
                         <ul>
                             <li><a href="#">Submissions</a></li>
                         </ul>
                     </div>
-                    <div class="col-lg-2 col-md-4 col-12 footer-widget">
+                    <div class="col-xl-2 col-lg-3 col-md-4 col-12 footer-widget">
                         <h6>THE FINE PRINT</h6>
                         <ul>
                             <li><a href="#">Terms and Conditions</a></li>
                         </ul>
                     </div>
-                    <div class="col-lg-2 col-md-4 col-12 footer-widget">
+                    <div class="col-xl-2 col-lg-3 col-md-4 col-12 footer-widget">
                         <h6>SHARE &amp; FOLLOW</h6>
                         <div class="social-wrap">
                             <a href="#"><img src="svg/facebook-icon.svg" alt=""></a>
@@ -336,7 +336,7 @@
                             <a href="#"><img src="svg/youtube-icon.svg" alt=""></a>
                         </div>
                     </div>
-                    <div class="col-lg-2 col-md-4 col-12 footer-widget">
+                    <div class="col-xl-2 col-lg-3 col-md-4 col-12 footer-widget">
                         <h6>CONTACT US</h6>
                         <ul>
                             <li><a href="#">Let us help you</a></li>
@@ -389,14 +389,7 @@
                 slidesToShow: 1,
               }
 
-            }, {
-
-              breakpoint: 300,
-              settings: {
-                slidesToShow: 1,
-              }
-
-          }]
+            }]
         });
     </script>
 </body>
