--- a/shop-by-artist.html
+++ b/shop-by-artist.html
@@ -18,12 +18,12 @@
         <header class="main-header-section">
             <div class="container">
                 <div class="row no-gutters top-bar">
-                    <span class="mr-auto">ARTIST SUBMISSION</span>
+                    <span class="mr-auto d-sm-none d-md-block">ARTIST SUBMISSION</span>
                     <div class="top-right-link-wrap ml-auto">
                         <a href="#" class="top-right-link">SIGN UP</a>
                         <a href="#" class="top-right-link">SIGN IN</a>
                         <a href="#" class="top-right-link">CART (0)</a>
-                        <form class="search-form my-0 d-inline-block">
+                        <form class="search-form mb-0 d-inline-block">
                           <input class="form-control mr-sm-2 d-none" type="search" placeholder="Search" aria-label="Search">
                           <button class="m-0 p-0 header-search-triger" type="submit">SEARCH</button>
                         </form>
@@ -45,7 +45,7 @@
                       </ul>
                     </div>
 
-                    <a class="navbar-brand mx-auto" href="index.html"><img src="svg/main-logo.svg" alt=""></a>
+                    <a class="navbar-brand mx-auto ml-sm-auto mr-sm-0" href="index.html"><img src="svg/main-logo.svg" alt=""></a>
 
                     <div class="collapse navbar-collapse">
                       <ul class="nav navbar-nav ml-auto">
@@ -143,7 +143,7 @@
         <footer class="main-footer-section">
             <div class="container">
                 <div class="row">
-                    <div class="col-lg-2 col-md-4 col-12 footer-widget">
+                    <div class="col-xl-2 col-lg-3 col-md-4 col-12 footer-widget">
                         <h6>ABOUT</h6>
                         <ul>
                             <li><a href="#">artfull</a></li>
@@ -152,7 +152,7 @@
                             <li><a href="#">Artists</a></li>
                         </ul>
                     </div>
-                    <div class="col-lg-2 col-md-4 col-12 footer-widget">
+                    <div class="col-xl-2 col-lg-3 col-md-4 col-12 footer-widget">
                         <h6>COLLECTORS</h6>
                         <ul>
                             <li><a href="#">Shipping</a></li>
@@ -161,19 +161,19 @@
                             <li><a href="#">FAQ’s</a></li>
                         </ul>
                     </div>
-                    <div class="col-lg-2 col-md-4 col-12 footer-widget">
+                    <div class="col-xl-2 col-lg-3 col-md-4 col-12 footer-widget">
                         <h6>ARTISTS</h6>
                         <ul>
                             <li><a href="#">Submissions</a></li>
                         </ul>
                     </div>
-                    <div class="col-lg-2 col-md-4 col-12 footer-widget">
+                    <div class="col-xl-2 col-lg-3 col-md-4 col-12 footer-widget">
                         <h6>THE FINE PRINT</h6>
                         <ul>
                             <li><a href="#">Terms and Conditions</a></li>
                         </ul>
                     </div>
-                    <div class="col-lg-2 col-md-4 col-12 footer-widget">
+                    <div class="col-xl-2 col-lg-3 col-md-4 col-12 footer-widget">
                         <h6>SHARE &amp; FOLLOW</h6>
                         <div class="social-wrap">
                             <a href="#"><img src="svg/facebook-icon.svg" alt=""></a>
@@ -182,7 +182,7 @@
                             <a href="#"><img src="svg/youtube-icon.svg" alt=""></a>
                         </div>
                     </div>
-                    <div class="col-lg-2 col-md-4 col-12 footer-widget">
+                    <div class="col-xl-2 col-lg-3 col-md-4 col-12 footer-widget">
                         <h6>CONTACT US</h6>
                         <ul>
                             <li><a href="#">Let us help you</a></li>
@@ -200,51 +200,6 @@
     <script src="./js/popper.min.js" crossorigin="anonymous"></script>
     <script src="./js/bootstrap.min.js" crossorigin="anonymous"></script>
     <script src="./js/slick.min.js"></script>
-    <script type="text/javascript">
-        // Hero section slider
-        var heroSlider = $("#hero-slider");
-        heroSlider.slick({
-          dots: false,
-          arrows: false,
-          infinite: true,
-          speed: 800,
-          slidesToShow: 1,
-        });
-        $(".hero-slider-cotroller .prev").click(function(e){
-            e.preventDefault();
-            heroSlider.slick("prev");
-        })
-        $(".hero-slider-cotroller .next").click(function(e){
-            e.preventDefault();
-            heroSlider.slick("next");
-        });
-        
-        // Testimonial carousel function
-        var testimonialCarousel = $("#testimonial-carousel");
-        testimonialCarousel.slick({
-          dots: false,
-          arrows: true,
-          infinite: true,
-          speed: 800,
-          slidesToShow: 2,
-          slidesToScroll: 1,
-          responsive: [{
-
-              breakpoint: 768,
-              settings: {
-                slidesToShow: 1,
-              }
-
-            }, {
-
-              breakpoint: 300,
-              settings: {
-                slidesToShow: 1,
-              }
-
-          }]
-        });
-    </script>
 </body>
 
 </html>
